# sample-blurring-detection

./: .gitignore  CMakeLists.txt  CMakeSettings.json  README.md  blurring-detection.cpp
